--- a/style.css
+++ b/style.css
@@ -14,3 +14,18 @@ body {
 .container {
     display: grid; grid-template-columns: 1fr 2fr;
 }
+
+.order-now-btn {
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 18px 0px;
+    background-color: black;
+    color: white;
+    border-radius: 20px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.order-now-btn:hover {
+    cursor: pointer;
+    background-color: rgb(60, 133, 0);
+}
