--- a/style.css
+++ b/style.css
@@ -11,6 +11,24 @@ body {
     padding: 0px  10vw;
 }
 
+.header-menu {
+    font-family: 'Noto Sans', sans-serif;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    text-align: center;
+    padding: 20px 0px;
+    padding-left: 15px;
+    justify-items: end;
+}
+
+.header-btn:hover{
+    cursor: pointer;
+    color: rgb(49, 155, 0);
+    color: rgb(255,240,222);
+    background: rgb(255,240,222);
+    text-shadow: 2px 2px 0 #18d100, 2px -2px 0 #18d100, -2px 2px 0 #18d100, -2px -2px 0 #18d100, 2px 0px 0 #18d100, 0px 2px 0 #18d100, -2px 0px 0 #18d100, 0px -2px 0 #18d100;
+}
+
 .container {
     display: grid; grid-template-columns: 1fr 2fr;
 }
@@ -28,4 +46,20 @@ body {
 .order-now-btn:hover {
     cursor: pointer;
     background-color: rgb(60, 133, 0);
+}
+
+.how-to-order {
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(12, 1, 1);
+    border-radius: 20px;
+    text-align: center;
+    font-size: 16px;
+    align-items: center;
+    display: grid; grid-template-columns: 1fr 2fr;
+    column-gap: 2px;
+}
+
+.how-to-order:hover {
+    cursor: pointer;
+    color: rgb(160, 72, 0);
 }
